tests/NormalTests/paczka1/fuzzy1/41856764.err
Error in line 1: SEnYUwmw A551 91,5
Error in line 3: yUf8hUJ A171 98,1
Error in line 5: M1WNhHeDW6 S356 73,8
Error in line 9: M1WNhHeDW6 A551 -2,2
Error in line 8: M1WNhHeDW6 A551 58,5
Error in line 12: sjYMWJ A551 42,9
Error in line 15: sjYMWJ A171 2,4
Error in line 24: sjYMWJ A551 188,80
Error in line 30: 8PlWcYgd S356 46,9
Error in line 21: sjYMWJ A551 51,1
